--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </form>
     </section>
     <footer>
-        <p>Built with &hearts; by Manjeet</p>
+        <p>Built with &hearts; by MKS</p>
     </footer>
 </body>
 
